--- a/NFSPatcherGUI/MainWindow.xaml
+++ b/NFSPatcherGUI/MainWindow.xaml
@@ -19,7 +19,7 @@
         <Button Name="Carbon" Click="Carbon_Click" Content="Carbon"  Height="60" Width="200" MinWidth="150" FontSize="20" FontWeight="Bold" Margin="126,0,566,40" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
         <Button Name="ProStreet" Click="ProStreet_Click" Content="ProStreet"  Height="60" Width="200" MinWidth="150" FontSize="20" FontWeight="Bold" Margin="346,0,346,40" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
         <Button Name="HotPursuit" Click="HotPursuit_Click" Content="Hot Pursuit"  Height="60" Width="200" MinWidth="150" FontSize="20" FontWeight="Bold" Margin="566,0,126,40" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-        <TextBlock x:Name="VersionText" HorizontalAlignment="Left" Margin="2,0,0,0" TextWrapping="Wrap" Text="v1.1" VerticalAlignment="Bottom" Foreground="White" FontSize="25" Height="30"/>
-        <Button x:Name="Changelog" Click="Changelog_Click" Content="Changelog"  Height="40" Width="104" MinWidth="150" FontSize="20" FontWeight="Bold" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+        <TextBlock Name="VersionText" HorizontalAlignment="Left" Margin="2,0,0,0" TextWrapping="Wrap" Text="v1.2" VerticalAlignment="Bottom" Foreground="White" FontSize="25" Height="30"/>
+        <Button Name="Changelog" Click="Changelog_Click" Content="Changelog"  Height="40" Width="104" MinWidth="150" FontSize="20" FontWeight="Bold" Margin="0,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Right"/>
     </Grid>
 </Window>
